--- a/linuxcnc-configuration/denford-orac-rpi/lathemacro.ui
+++ b/linuxcnc-configuration/denford-orac-rpi/lathemacro.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Generated with glade 3.22.1 -->
-<glade-interface>
+<interface>
   <requires lib="gtk+" version="3.4"/>
   <requires lib="gladevcp" version="0.0"/>
   <object class="GtkAdjustment" id="BoreAngleAdj">
@@ -2934,4 +2934,4 @@
       </object>
     </child>
   </object>
-</glade-interface>
+</interface>
